fixed more alignment issues and box sizing

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -4,10 +4,12 @@
 	height: 10%;
 	width: 100%;
 	background-color: black;
+	display: inline-block;
 }
 
 #header div {
 	display: inline-block;
+	vertical-align: bottom;
 }
 
 #bmf-pic-thing {
@@ -16,20 +18,23 @@
 
 .mega-nav {
 	display: inline-block;
+	color: white;
 }
 
 #mega-title {
-	/*margin-right: 15%;*/
+	margin-right: 15%;
 }
 
 #about_contact {
-	font-family: sans;
+	font-family: 'Open sans', sans-serif;
+	font-size: 1.5em;
+	float: right;
+	margin-right: 27%;
+	margin-top: 4.5%;
 }
 
 #nav-linkness {
-	color: white;
-	font-size: 1.5em;
-	margin-left: 15px;
+	margin-left: 20px;
 }
 
 .link {
@@ -47,33 +52,37 @@
 .mission-words {
 	text-align: center;
 	color: #4da76e;
-	margin-top: 50px;
+	padding-top: 2%;
 }
 
 .mission-words h1 {
-	font-family: bellefair;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .mission-words h5 {
-	font-family: sans;
+	font-family: 'Bellefair', serif;
 	margin-top: 3%;
+	margin-bottom: 5%;
+	padding-bottom: 5%;
 }
 
 #lilly-service {
 	width: 100%;
-	height: 400px;
-	background-color: #4da76e;
+	height: auto;
+	background-color: rgba(77, 167, 110, .9);
+	padding-bottom: 1%;
 }
 
 #box-service {
 	width: 100%;
-	height: 600px;
+	height: auto;
 	background-color: #a5a5a5;
+	padding-top: 1%;
 }
 
 #quote-home {
-	padding-top: 100px;
-	font-family: sans;
+	padding: 5%;
+	font-family: 'Bellefair', serif;
 }
 
 #lilly-row {
@@ -93,7 +102,7 @@
 }
 
 #lilly-row img {
-	padding: 10px;
+	padding: 5%;
 	max-height: 170px;
 	max-width: 170px;
 	margin: auto;padding-left: 10px;
@@ -101,13 +110,13 @@
 }
 
 .low-margin {
-	width: 167px;
+	width: 90%;
 }
 
 @media only screen and (max-width: 882px) {
 
 #lilly-service {
-	height: 750px;
+	height: 90%;
 }
 
 }
@@ -115,16 +124,18 @@
 @media only screen and (max-width: 500px) {
 
 #lilly-row div {
-	height: 170px;
-	width: 200px;
+	height: auto;
+	width: 170px;
+	margin-bottom: 2%;
 }
 
 #lilly-service {
-	height: 1100px;
+	height: auto;
+	padding: 5% 0 5% 0;
 }
 
 #box-service {
-	height: 250px;
+	height: 40%;
 }
 
 }
@@ -138,12 +149,13 @@
 
 #grouppic {
 	text-align: center;
+	padding-bottom: 5%;
 }
 
 #box-service h3 {
 	text-align: center;
 	color: white;
-	font-family: bellefair;
+	font-family: 'Open sans', sans-serif;
 }
 
 #sample-header {
@@ -167,21 +179,16 @@
 }
 
 #white-tile {
-	height: 450px;
-	width: 100vw;
+	height: auto;
+	width: 100%;
   position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
 }
 
-/*#white-tile h2 {
+#white-tile h2 {
 	padding-top: 3%;
-}*/
+}
 
 #white-tile h2, h4, p {
-
 	color: #4da76e;
 }
 
@@ -199,19 +206,14 @@
 }
 
 #grey-tile h2 {
-
-
 	color: #4da76e;
 }
 
 #grey-tile h2, h4, p {
-
-
 	color: #4da76e;
 }
 
 #grey-tile p {
-
 	width: 300px;
 }
 
@@ -235,18 +237,15 @@
 }
 
 .pics {
-
   max-height: 350px;
   max-width: 350px;
 	margin-top: 4%;
-
 }
 
 #frogs {
 	margin-left: 18%;
 	display: inline-block;
 }
-
 
 #about-footer {
   text-align: center;
@@ -258,7 +257,7 @@
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
-  font-family: sans;
+  font-family: 'Open sans', sans-serif;
 }
 
 #about-footer div {
@@ -284,10 +283,6 @@
 
 @media only screen and (max-width: 1020px) {
 
-#white-tile {
-	height: 750px;
-}
-
 #grey-tile {
 	height: 650px;
 }
@@ -302,12 +297,10 @@
 
 }
 
-
-
 @media only screen and (max-width: 1219px) {
 
 #about-footer {
-	height: 420px;
+	height: 50%;
 }
 
 }
@@ -315,7 +308,7 @@
 @media only screen and (max-width: 855px) {
 
 #about-footer {
-	height: 550px;
+	height: 50%;
 }
 
 }
@@ -323,12 +316,10 @@
 @media only screen and (max-width: 555px) {
 
 #about-footer {
-	height: 850px;
+	height: 50%;
 }
 
 }
-
-
 
 #portfolio-wrapper {
 	background-color: #4da76e;
